@@ -1,3 +1,7 @@
+2006-03-10  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_setPrinterShared): Renamed.
+
 2006-03-09  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_getClasses): Handle empty classes.
